# Robot-Manipulator-for-pick-place-applications

./: CMakeLists.txt  README.md  README.md.md  package.xml
config/: config_controllers.yaml
launch/: display.launch  gazebo.launch  manipulator.launch  manipulator_arm.launch
scripts/: ikcode.py
urdf/: manipulator.urdf  manipulator_urdf.urdf
world/: my_world.sdf  warehouse.world
